--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Comment -->
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" type="text/css">
